--- a/src/components/icon.html
+++ b/src/components/icon.html
@@ -58,6 +58,10 @@
 							<span class="text">download</span>
 						</li>
 						<li>
+							<span class="icon"><i class="ico badge-f xl2"></i></span>
+							<span class="text">badge-f</span>
+						</li>
+						<li>
 							<span class="icon"><i class="ico badge-g xl2"></i></span>
 							<span class="text">badge-g</span>
 						</li>
@@ -102,6 +106,10 @@
 						<li>
 							<span class="icon"><i class="ico arrow-right-nav050 xs"></i></span>
 							<span class="text">arrow-right-nav050</span>
+						</li>
+						<li>
+							<span class="icon"><i class="ico arrow-right-nav060 lg"></i></span>
+							<span class="text">arrow-right-nav060</span>
 						</li>
 						<li>
 							<span class="icon"><i class="ico arrow-right lg"></i></span>
