--- a/src/scss/_icon.scss
+++ b/src/scss/_icon.scss
@@ -44,12 +44,14 @@ $icon-size: (
         "arrow-right-nav030": "icon_arrow_right_navy030.svg",
         "arrow-right-nav040": "icon_arrow_right_navy040.svg",
         "arrow-right-nav050": "icon_arrow_right_navy050.svg",
+        "arrow-right-nav060": "icon_arrow_right_navy060.svg",
         "arrow-left": "arrow-left.svg",
         "arrow-bot": "icon_arrow_bot.svg",
         "eye-on": "icon_eye_on.svg",
         "eye-off": "icon_eye_off.svg",
         "bookmark": "icon_bookmark.svg",
         "bookmark-active": "bookmark_active.svg",
+        "badge-f": "icon_badge_f.svg",
         "badge-g": "icon_badge_g.svg",
         "plus": "icon_plus.svg",
         "download": "icon_download.svg",
