쿠폰 혜택 선택 화면 추가

--- a/src/components/icon.html
+++ b/src/components/icon.html
@@ -112,8 +112,8 @@
 							<span class="text">arrow-right-nav060</span>
 						</li>
 						<li>
-							<span class="icon"><i class="ico arrow-right lg"></i></span>
-							<span class="text">arrow-right</span>
+							<span class="icon"><i class="ico arrow-bot-nav060 lg"></i></span>
+							<span class="text"> arrow-bot-nav060</span>
 						</li>
 						<li>
 							<span class="icon"><i class="ico arrow-right lg"></i></span>
