--- a/src/scss/_layer.scss
+++ b/src/scss/_layer.scss
@@ -45,13 +45,13 @@ html.is-open, html.is-open body {
 		border-radius: $border-radius-20;
         .layer-header {
             max-height: 66px;
-            padding: 20px 20px 12px;
+            padding: 14px 20px 12px;
             font-size: 18px;
             font-weight: bold;
 
             .title{
                 color: $navy-070;
-                font-size: 20px;
+                font-size:$font-xl;
                 font-weight: 500;
             }
             .layer-close {
