내정보 > 그린댓글 > 목록, 수정 -- 작업 중

--- a/src/scss/_icon.scss
+++ b/src/scss/_icon.scss
@@ -25,6 +25,10 @@ $icon-size: (
         "width": 32px,
         "height": 32px
     ),
+    "xl3": (
+        "width": 40px,
+        "height": 40px
+    ),
 	"bic": (
         "width": 48px,
         "height": 48px
@@ -63,6 +67,12 @@ $icon-size: (
         "text-delete": "icon_text_del.svg",
         "more": "icon_more.svg",
         "share": "icon_share.svg",
+        "dots-v": "icon_dots_v.svg",
+        "message": "icon_message.svg",
+        "heart-on": "icon_heart_on.svg",
+        "heart-off": "icon_heart_off.svg",
+        "oil-gun": "icon_oil_gun.svg",
+        "pic-delete": "icon_pic_delete.svg",
     )
     
 ) !default;
