--- a/src/scss/_mypage.scss
+++ b/src/scss/_mypage.scss
@@ -147,7 +147,6 @@
                         margin: 4px auto;
                         top: 0;
                     }
-                    
                 }
                 &.done {
                     .dot {
@@ -237,7 +236,7 @@
                 justify-content: space-between;
                 width: 100%;
                 .name {
-                    width: initial;
+                    width: initial !important;
                 }
             }
             li + li {
@@ -252,43 +251,42 @@
 
 // 내 포인트
 .point-history {
-    h3{
-        color:$navy-070;
+    h3 {
+        color: $navy-070;
         font-size: 12px;
         font-weight: 500;
     }
-    .point-summary{
+    .point-summary {
         padding: 24px 0;
         border-bottom: 1px solid $navy-020;
-        .title{
+        .title {
             margin-bottom: 16px;
         }
-        .value{
+        .value {
             color: $green-060;
             font-size: 22px;
             font-weight: 600;
             text-align: right;
-
         }
     }
-    .point-summary + .list{
+    .point-summary + .list {
         margin: 16px 0;
     }
-    .row{
+    .row {
         padding: 20px 0;
-        
+
         @include flex-center;
-        > div{
+        > div {
             @include flex-center;
         }
-        .right{
+        .right {
             margin-left: auto;
-            .value{
+            .value {
                 font-size: 16px;
                 font-weight: 600;
             }
         }
-        .btn{
+        .btn {
             margin-left: 4px;
         }
     }
@@ -354,5 +352,177 @@
         li + li {
             border-top: 1px solid $navy-020;
         }
+    }
+}
+
+// 그린 댓글
+.my-reply {
+    .reply-item + .reply-item {
+        &::before {
+            content: " ";
+            display: block;
+            height: 7px;
+            margin: 0 -20px;
+            background-color: $gray-010;
+            border-top: 1px solid $gray-020;
+        }
+    }
+    .my-reply-top {
+        height: 48px;
+        background-color: $gray-005;
+        font-size: 12px;
+        font-weight: 500;
+        @include flex-center;
+        .count {
+            margin-left: 2px;
+        }
+    }
+    .reply-head {
+        padding: 24px 0 8px;
+        border-bottom: 1px solid $navy-020;
+        @include flex-center;
+        .car-desc {
+            @include flex-center;
+            * + * {
+                margin-left: 8px;
+            }
+            .car-img {
+                width: 40px;
+                height: 24px;
+                overflow: hidden;
+            }
+            .car-num {
+                color: $navy-040;
+                font-size: 12px;
+            }
+        }
+        .write-date {
+            color: $navy-040;
+            font-size: 12px;
+            font-weight: 500;
+        }
+        .btn {
+            margin-left: auto;
+        }
+    }
+    .reply-body {
+        padding: 8px 0;
+        .img {
+            width: 84px;
+            height: 84px;
+            margin-top: 16px;
+            border-radius: $border-radius;
+            overflow: hidden;
+        }
+    }
+    .reply-footer {
+        padding-bottom: 24px;
+        @include flex-center;
+        > div {
+            gap: 2px;
+            @include flex-center;
+        }
+        .like {
+            margin-right: 16px;
+            &.on {
+                .count {
+                    color: $green-060;
+                    font-weight: 500;
+                }
+            }
+        }
+    }
+    .comment-wrap {
+        .comment-item {
+            padding: 16px 0;
+            background-color: $gray-010;
+            .comment-head {
+                font-size: 12px;
+                font-weight: 500;
+                padding-bottom: 8px;
+                @include flex-center;
+                .profile {
+                    display: inline-block;
+                    width: 24px;
+                    height: 24px;
+                    border-radius: 50%;
+                    overflow: hidden;
+                    background-image: url(#{$url-ico}icon_profile.svg);
+                    background-repeat: no-repeat;
+                    background-position: center center;
+                    background-size: cover;
+                }
+                .name {
+                    margin-left: 8px;
+                }
+                .date {
+                    color: $navy-040;
+                    margin-left: 16px;
+                }
+            }
+            .comment-body {
+                color: $navy-070;
+                font-size: 14px;
+                font-family: 500;
+            }
+        }
+    }
+}
+
+// 그린댓글 수정
+.edit-reply {
+    section {
+        padding: 32px 0;
+    }
+    .car-info {
+        margin-bottom: 24px;
+        justify-content: center;
+        @include flex-center;
+        .img {
+            width: 110px;
+            height: 110px;
+        }
+        .info {
+            margin-left: 16px;
+            strong {
+                font-size: 18px;
+            }
+            span {
+                color: $navy-040;
+                font-size: 12px;
+                display: block;
+            }
+            .option {
+                @include flex-center;
+                .bar {
+                    width: 1px;
+                    height: 12px;
+                    background-color: $navy-020;
+                    margin: 0 4px;
+                    border: 0;
+                }
+            }
+        }
+    }
+    .img-area {
+        width: 100%;
+        height: 180px;
+        overflow: hidden;
+        vertical-align: middle;
+        position: relative;
+        img {
+            width: 100%;
+        }
+        .btn{
+            position: absolute;
+            top: 16px;
+            right: 16px;
+            z-index: 10;
+        }
+    }
+    .title-sm + p {
+        color: $navy-040;
+        font-size: 14px;
+        margin: 16px 0 8px;
     }
 }
