--- a/src/scss/_icon.scss
+++ b/src/scss/_icon.scss
@@ -73,6 +73,7 @@ $icon-size: (
         "heart-off": "icon_heart_off.svg",
         "oil-gun": "icon_oil_gun.svg",
         "pic-delete": "icon_pic_delete.svg",
+        "check-green": "icon_check_on.svg",
     )
     
 ) !default;
