쿠폰 다운로드 후 ,  다운로드 아이콘-> 체크 아이콘으로 변경

--- a/src/scss/_icon.scss
+++ b/src/scss/_icon.scss
@@ -74,6 +74,7 @@ $icon-size: (
         "oil-gun": "icon_oil_gun.svg",
         "pic-delete": "icon_pic_delete.svg",
         "check-green": "icon_check_on.svg",
+        "check-second": "icon_second_check.svg",
     )
     
 ) !default;
