--- a/src/scss/_mypage.scss
+++ b/src/scss/_mypage.scss
@@ -585,7 +585,7 @@
                         display: none;
                     }
                     .text{
-                        color: $navy-02 0;
+                        color: $navy-020;
                     }
                 }
             }
