--- a/src/scss/_benefit.scss
+++ b/src/scss/_benefit.scss
@@ -14,8 +14,20 @@
     >div{
         @include flex-center();
     }
+    .left{
+        h3{
+            margin-left: 8px;
+            color: $navy-040;
+            font-size: 16px;
+            font-weight: 500;
+        }
+    }
     .right{
         margin-left: auto;
+        .btn{
+            border-radius: 2rem;
+            height: 24px;
+        }
     }
    }
     .section-cont {
