수정 및 화면 추가

--- a/src/components/form.html
+++ b/src/components/form.html
@@ -21,7 +21,7 @@ h2{margin-bottom:20px;font-size:30px}
 				<div class="tmp-guide-box">
 					<h2 class="guide-box-tit">Checkbox</h2>
 
-					<label for="tmpCheckbook1" class="gc-checkbox round">
+					<label for="tmpCheckbook1" class="gc-checkbox">
 						<input type="checkbox" id="tmpCheckbook1" checked>
 						<span>체크박스</span>
 					</label>
