--- a/src/components/tab.html
+++ b/src/components/tab.html
@@ -53,6 +53,18 @@
 								<span class="tab-indicator"></span>
 							</div>
 
+							<div class="gc-tab scroll">
+								<ul>
+									<li><a href="#" class="active">전체</a></li>
+									<li><a href="#">수도권</a></li>
+									<li><a href="#">강원도</a></li>
+									<li><a href="#">경상도</a></li>
+									<li><a href="#">충청도</a></li>
+									<li><a href="#">충청도</a></li>
+								</ul>
+								<span class="tab-indicator"></span>
+							</div>
+
 							<br><br>
 
 							<div class="gc-tab-type02">
