--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -142,6 +142,11 @@ $btn-size: (
 			display:flex;
 			justify-items: center;
 			align-items: center;
+
+			&.full{
+				margin:0 -20px;
+				border-radius:0;
+			}
 		}
 
         &.column{
