내 정보  --  작업 중

--- a/src/scss/_mypage.scss
+++ b/src/scss/_mypage.scss
@@ -580,8 +580,8 @@
     }
     .how-to-invite {
         display: flex;
-        justify-content: center;
-        // justify-content: space-between;
+        // justify-content: center;
+        justify-content: space-between;
         padding-top: 16px;
         .step {
             width: 72px;
