쿠폰 수정 -- 쿠폰active추가, 혜택 상세영역 링크 추가

--- a/src/scss/_reservation.scss
+++ b/src/scss/_reservation.scss
@@ -285,6 +285,9 @@ hr.divider {
                     z-index: 10;
                 }
             }
+            &.active{
+                border: 2px solid $green-060;
+            }
         }
     }
 }
