--- a/src/scss/_benefit.scss
+++ b/src/scss/_benefit.scss
@@ -123,6 +123,14 @@
             border: 1px solid $navy-020;
             border-radius: $border-radius;
             position: relative;
+            background-image: none;
+            @include flex-center;
+            .coupon-desc{
+                flex: 1;
+            }
+            .coupon-desc + .btn{
+                flex: 0 0 auto;
+            }
             .discount-type {
                 display: inline-flex;
                 align-items: center;
@@ -190,11 +198,7 @@
                     z-index: 10;
                 }
             }
-            .effective-date + .btn {
-                position: absolute;
-                right: 20px;
-                top: calc(50% - 12px);
-            }
+           
         }
     }
     .event-detail {
